@@ -1214,13 +1214,23 @@ getAddr(NSString* name, NSString* svc, NSString* pcl, struct sockaddr_in *sin)
 		    type: ET_RDESC
 		 forMode: [modes objectAtIndex: i]
 		     all: YES];
+	  [l removeEvent: (void*)(gsaddr)descriptor
+		    type: ET_EDESC
+		 forMode: [modes objectAtIndex: i]
+		     all: YES];
         }
     }
   else
-    [l removeEvent: (void*)(gsaddr)descriptor
-	      type: ET_RDESC
-	   forMode: NSDefaultRunLoopMode
-	       all: YES];
+    {
+      [l removeEvent: (void*)(gsaddr)descriptor
+		type: ET_RDESC
+	     forMode: NSDefaultRunLoopMode
+		 all: YES];
+      [l removeEvent: (void*)(gsaddr)descriptor
+		type: ET_EDESC
+	     forMode: NSDefaultRunLoopMode
+		 all: YES];
+    }
 }
 
 - (void) ignoreWriteDescriptor
@@ -1229,7 +1239,9 @@ getAddr(NSString* name, NSString* svc, NSString* pcl, struct sockaddr_in *sin)
   NSArray	*modes;
 
   if (descriptor < 0)
-    return;
+    {
+      return;
+    }
 
   l = [NSRunLoop currentRunLoop];
   modes = nil;
@@ -1251,13 +1263,23 @@ getAddr(NSString* name, NSString* svc, NSString* pcl, struct sockaddr_in *sin)
 		    type: ET_WDESC
 		 forMode: [modes objectAtIndex: i]
 		     all: YES];
+	  [l removeEvent: (void*)(gsaddr)descriptor
+		    type: ET_EDESC
+		 forMode: [modes objectAtIndex: i]
+		     all: YES];
         }
     }
   else
-    [l removeEvent: (void*)(gsaddr)descriptor
-	      type: ET_WDESC
-	   forMode: NSDefaultRunLoopMode
-	       all: YES];
+    {
+      [l removeEvent: (void*)(gsaddr)descriptor
+		type: ET_WDESC
+	     forMode: NSDefaultRunLoopMode
+		 all: YES];
+      [l removeEvent: (void*)(gsaddr)descriptor
+		type: ET_EDESC
+	     forMode: NSDefaultRunLoopMode
+		 all: YES];
+    }
 }
 
 - (void) watchReadDescriptorForModes: (NSArray*)modes;
@@ -1279,6 +1301,10 @@ getAddr(NSString* name, NSString* svc, NSString* pcl, struct sockaddr_in *sin)
 		 type: ET_RDESC
 	      watcher: self
 	      forMode: [modes objectAtIndex: i]];
+	  [l addEvent: (void*)(gsaddr)descriptor
+		 type: ET_EDESC
+	      watcher: self
+	      forMode: [modes objectAtIndex: i]];
         }
       [readInfo setObject: modes forKey: NSFileHandleNotificationMonitorModes];
     }
@@ -1286,6 +1312,10 @@ getAddr(NSString* name, NSString* svc, NSString* pcl, struct sockaddr_in *sin)
     {
       [l addEvent: (void*)(gsaddr)descriptor
 	     type: ET_RDESC
+	  watcher: self
+	  forMode: NSDefaultRunLoopMode];
+      [l addEvent: (void*)(gsaddr)descriptor
+	     type: ET_EDESC
 	  watcher: self
 	  forMode: NSDefaultRunLoopMode];
     }
@@ -1316,12 +1346,20 @@ getAddr(NSString* name, NSString* svc, NSString* pcl, struct sockaddr_in *sin)
 		     type: ET_WDESC
 		  watcher: self
 		  forMode: [modes objectAtIndex: i]];
+	      [l addEvent: (void*)(gsaddr)descriptor
+		     type: ET_EDESC
+		  watcher: self
+		  forMode: [modes objectAtIndex: i]];
 	    }
 	}
       else
 	{
 	  [l addEvent: (void*)(gsaddr)descriptor
 		 type: ET_WDESC
+	      watcher: self
+	      forMode: NSDefaultRunLoopMode];
+	  [l addEvent: (void*)(gsaddr)descriptor
+		 type: ET_EDESC
 	      watcher: self
 	      forMode: NSDefaultRunLoopMode];
 	}
@@ -1336,7 +1374,25 @@ getAddr(NSString* name, NSString* svc, NSString* pcl, struct sockaddr_in *sin)
   NSString	*operation;
 
   if (isNonBlocking == NO)
-    [self setNonBlocking: YES];
+    {
+      [self setNonBlocking: YES];
+    }
+
+  /*
+   * An exceptional condition must be treated as a read or write.
+   */
+  if (type == ET_EDESC)
+    {
+      if ([writeInfo count] > 0)
+	{
+	  type = ET_WDESC;
+	}
+      else
+	{
+	  type = ET_RDESC;
+	}
+    }
+
   if (type == ET_RDESC)
     {
       operation = [readInfo objectForKey: NotificationKey];
